--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,20 @@
 {
 	"name": "rave-curl-js",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"description": "Adds curl's js AMD plugin to RaveJS.",
 	"main": "rave.js",
 	"dependencies": {
 		"curl": "~0.8",
-		"rave-amd-plugins": "~0.1"
+		"rave-amd-plugins": "~0.2"
 	},
-	"rave": "rave",
+	"rave": {
+		"extension": "rave",
+		"overrides": {
+			"curl": {
+				"location": "bower_components/curl/src/curl"
+			}
+		}
+	},
 	"moduleType": [
 		"node"
 	],
